test/cases/compile_errors/use_anyopaque_as_return_type_of_fn_ptr.zig
export fn entry() void {
    const a: fn () anyopaque = undefined;
    _ = a;
}

// error
//
// :2:20: error: opaque return type 'anyopaque' not allowed
